# stark-integration-project

./: README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
db/: dynamo_operations.py  dynamo_schemas.py
lambdas/: generate_invoices.py  handle_webhook.py
utils/: errors.py  random_person_data.py  stark_bank.py
